--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "deepfake-ecg"
-version = "1.1.3"
-description = "Unlimited 10-sec 8-leads Deep Fake ECG generator."
+version = "1.2.0"
+description = "Configurable Deep Fake ECG generator."
 readme = "README.md"
 authors = [
-    { name = "Vajira Thambawita", email = "vlbthambawita@gmail.com" }
+    { name = "Vajira Thambawita", email = "vlbthambawita@gmail.com" },
+    { name = "Thomas Dreibholz", email = "dreibh@simula.no" }
 ]
 license = { text = "MIT" }
 classifiers = [
